Fixed installation - added alert when empty password field Wrapped installation static text for translation Optimized the installation english.ini file Fixed "GNU Lesser General Public License" link
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@994 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/tmpl/install.css
+++ b/installation/tmpl/install.css
@@ -225,6 +225,15 @@ table.content2 td {
 	font-weight: bold;
 }
 
+.Writeable {
+	color: green;
+	font-weight: bold;
+}
+.Unwriteable {
+	color: red;
+	font-weight: bold;
+}
+
 /*  old stuff */
 
 a {
