--- a/installation/tmpl/install_rtl.css
+++ b/installation/tmpl/install_rtl.css
@@ -230,6 +230,15 @@ table.content2 td {
 	font-weight: bold;
 }
 
+.Writeable {
+	color: green;
+	font-weight: bold;
+}
+.Unwriteable {
+	color: red;
+	font-weight: bold;
+}
+
 /*  old stuff */
 
 a {
